[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-stretcher"
version = "0.1.0"
description = "A GPL-licensed CLI tool for high-quality audio time-stretching using Rubberband (pyrubberband)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "numpy>=1.20.0",
    "soundfile>=0.10.0",
    "pyrubberband>=0.3.0",
]

[project.scripts]
audio-stretcher = "audio_stretcher.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
